@@ -34,15 +34,13 @@ import org.slf4j.LoggerFactory;
 import java.nio.file.Path;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.UnaryOperator;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.stream.Collectors.toConcurrentMap;
@@ -60,7 +58,7 @@ abstract class AbstractAnalysisRunner implements AnalysisRunner {
     protected final VariantFilterRunner variantFilterRunner;
     private final GeneFilterRunner geneFilterRunner;
 
-    public AbstractAnalysisRunner(GenomeAnalysisService genomeAnalysisService, VariantFilterRunner variantFilterRunner, GeneFilterRunner geneFilterRunner) {
+    protected AbstractAnalysisRunner(GenomeAnalysisService genomeAnalysisService, VariantFilterRunner variantFilterRunner, GeneFilterRunner geneFilterRunner) {
         this.genomeAnalysisService = genomeAnalysisService;
 
         this.variantFilterRunner = variantFilterRunner;
@@ -141,16 +139,13 @@ abstract class AbstractAnalysisRunner implements AnalysisRunner {
         }
 
         logger.info("Scoring genes");
-        List<Gene> genes;
-        List<VariantEvaluation> variants;
-        GeneScorer geneScorer = new RawScoreGeneScorer(probandIdentifier, sample.getSex(), inheritanceModeAnnotator);
-        if (variantsLoaded) {
-            genes = geneScorer.scoreGenes(getGenesWithVariants(allGenes));
-            variants = getFinalVariantList(variantEvaluations);
-        } else {
-            genes = geneScorer.scoreGenes(new ArrayList<>(allGenes.values()));
-            variants = Collections.emptyList();
-        }
+        List<Gene> genesToScore = variantsLoaded ? getGenesWithVariants(allGenes) : List.copyOf(allGenes.values());
+        // Temporarily add a new PValueGeneScorer so as not to break semver will revert to RawScoreGeneScorer in 14.0.0
+        CombinedScorePvalueCalculator combinedScorePvalueCalculator = buildCombinedScorePvalueCalculator(sample, analysis, genesToScore.size());
+        GeneScorer geneScorer = new PvalueGeneScorer(probandIdentifier, sample.getSex(), inheritanceModeAnnotator, combinedScorePvalueCalculator);
+
+        List<Gene> genes = geneScorer.scoreGenes(genesToScore);
+        List<VariantEvaluation> variants = variantsLoaded ? getFinalVariantList(variantEvaluations) : List.of();
 
         logger.info("Analysed {} genes containing {} filtered variants", genes.size(), variants.size());
 
@@ -170,6 +165,13 @@ abstract class AbstractAnalysisRunner implements AnalysisRunner {
         return analysisResults;
     }
 
+    private CombinedScorePvalueCalculator buildCombinedScorePvalueCalculator(Sample sample, Analysis analysis, int numFilteredGenes) {
+        var prioritiser = analysis.getMainPrioritiser();
+        List<Gene> knownGenes = genomeAnalysisService.getKnownGenes();
+        int bootStrapValue = 2_000;
+        return prioritiser == null ? CombinedScorePvalueCalculator.withRandomScores(bootStrapValue, knownGenes.size(), numFilteredGenes) : CombinedScorePvalueCalculator.of(bootStrapValue, prioritiser, sample.getHpoIds(), knownGenes, numFilteredGenes);
+    }
+
     /**
      * @return a map of genes indexed by gene symbol.
      */
@@ -185,16 +187,20 @@ abstract class AbstractAnalysisRunner implements AnalysisRunner {
 
         List<VariantEvaluation> filteredVariants;
         VariantLogger variantLogger = new VariantLogger();
+
+        // this can be done using parallel which dramatically reduces runtime at the expense of RAM and
+        //  inability to scale past one job running on one machine
         try (Stream<VariantEvaluation> variantStream = variantFactory.createVariantEvaluations()) {
-            filteredVariants = variantStream
-                    .peek(variantLogger.logLoadedAndPassedVariants())
-                    .filter(isObservedInProband(probandIdentifier))
-                    .map(geneReassigner::reassignRegulatoryAndNonCodingVariantAnnotations)
-                    .map(flagWhiteListedVariants())
-                    .filter(isAssociatedWithKnownGene(allGenes))
-                    .filter(runVariantFilters(variantFilters, filterStats))
-                    .peek(variantLogger.countPassedVariant())
-                    .collect(toList());
+                    filteredVariants = variantStream
+//                        .parallel()
+                        .peek(variantLogger.logLoadedAndPassedVariants())
+                        .filter(isObservedInProband(probandIdentifier))
+                        .map(geneReassigner::reassignRegulatoryAndNonCodingVariantAnnotations)
+                        .map(flagWhiteListedVariants())
+                        .filter(isAssociatedWithKnownGene(allGenes))
+                        .filter(runVariantFilters(variantFilters, filterStats))
+                        .peek(variantLogger.countPassedVariant())
+                        .collect(toList());
         }
         variantLogger.logResults();
         return filteredVariants;
@@ -287,7 +293,7 @@ abstract class AbstractAnalysisRunner implements AnalysisRunner {
      * @return
      */
     protected List<Gene> getGenesWithVariants(Map<String, Gene> allGenes) {
-        return allGenes.values().stream().filter(Gene::hasVariants).collect(toList());
+        return allGenes.values().stream().filter(Gene::hasVariants).collect(Collectors.toUnmodifiableList());
     }
 
     abstract List<VariantEvaluation> getFinalVariantList(List<VariantEvaluation> variants);
